--- a/WeatherCopilot.ApiService/appsettings.json
+++ b/WeatherCopilot.ApiService/appsettings.json
@@ -5,5 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AzureAIUrl": "ChangeMe",
+  "AzureAIDeploymentName": "ChangeMe"
 }
